--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "homepage": "https://github.com/uzair004/node-clean-boilerplate#readme",
   "dependencies": {
     "convict": "^6.2.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-bunyan-logger": "^1.3.3",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
