--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-bunyan-logger": "^1.3.3",
+    "jsonwebtoken": "^9.0.0",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
