--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "nodejs boilerplate that follows Clean Architecture principles",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint ./"
   },
   "repository": {
     "type": "git",
