--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.18.2",
     "express-bunyan-logger": "^1.3.3",
     "jsonwebtoken": "^9.0.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.0"
