--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint ./"
+    "lint": "npx eslint ./",
+    "db:migrate": "npx sequelize db:migrate",
+    "db:migrate:create": "npx sequelize migration:generate --name",
+    "db:migrate:undo": "npx sequelize db:migrate:undo"
   },
   "repository": {
     "type": "git",
@@ -28,6 +31,7 @@
     "express": "^4.18.2",
     "express-bunyan-logger": "^1.3.3",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.2.0",
     "sequelize": "^6.28.0",
     "ulid": "^2.3.0"
   },
